transform actions added

--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -26,3 +26,48 @@
     border-radius: 30px;
     border-width: 2px;
 }
+
+.overlay-button:hover {
+    opacity: 0.8;
+}
+
+.wave {
+    animation-name: wave-animation;
+    animation-duration: 2s;
+    animation-iteration-count: 2;
+    transform-origin: 50% 50%;
+}
+
+@keyframes wave-animation {
+    0% {
+        transform: rotate(0.0deg)
+    }
+
+    10% {
+        transform: rotate(14.0deg)
+    }
+
+    20% {
+        transform: rotate(-8.0deg)
+    }
+
+    30% {
+        transform: rotate(14.0deg)
+    }
+
+    40% {
+        transform: rotate(-4.0deg)
+    }
+
+    50% {
+        transform: rotate(10.0deg)
+    }
+
+    60% {
+        transform: rotate(0.0deg)
+    }
+
+    100% {
+        transform: rotate(0.0deg)
+    }
+}
