--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-14 flex md:justify-between items-center md:px-20" [class]="isDark?dark:light">
+<div class="w-full h-14 flex md:justify-between items-center sticky md:px-20 top-0 left-0 z-10 block" [class]="isDark?dark:light" @topBottomTrigger>
     <div class="text-center">
         <button class="cursor-pointer tracking-widest border hover:border-black px-4 py-1 rounded-full">shiyas.me</button>
     </div>
